--- a/Game/Generic RPG (Change Name)/Generic RPG (Change Name).csproj
+++ b/Game/Generic RPG (Change Name)/Generic RPG (Change Name).csproj
@@ -50,7 +50,14 @@
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Content\" />
+    <Folder Include="Content\Backgrounds\" />
+    <Folder Include="Content\Fonts\" />
+    <Folder Include="Content\Levels\" />
+    <Folder Include="Content\Overlays\" />
+    <Folder Include="Content\Sounds\" />
+    <Folder Include="Content\Sprites\Monster\" />
+    <Folder Include="Content\Sprites\Player\" />
+    <Folder Include="Content\Tiles\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
