--- a/RPG/RPG.csproj
+++ b/RPG/RPG.csproj
@@ -36,6 +36,23 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Game1.cs" />
+    <Compile Include="GameLogic\Interface\IDraw.cs" />
+    <Compile Include="GameLogic\Interface\IEnemy.cs" />
+    <Compile Include="GameLogic\Interface\IFight.cs" />
+    <Compile Include="GameLogic\Interface\IItem.cs" />
+    <Compile Include="GameLogic\Interface\IPlayer.cs" />
+    <Compile Include="GameLogic\Interface\IRoam.cs" />
+    <Compile Include="GameLogic\Interface\IMove.cs" />
+    <Compile Include="GameLogic\Interface\ITimeout.cs" />
+    <Compile Include="GameLogic\Models\Effects\Base\Effects.cs" />
+    <Compile Include="GameLogic\Models\Inventory\Base\Inventory.cs" />
+    <Compile Include="GameLogic\Models\Items\Base\PickUp.cs" />
+    <Compile Include="GameLogic\Models\Items\Item.cs" />
+    <Compile Include="GameLogic\Models\NPC\Base\Npc.cs" />
+    <Compile Include="GameLogic\Models\Stats\Attack.cs" />
+    <Compile Include="GameLogic\Models\Stats\Base\Stat.cs" />
+    <Compile Include="GameLogic\Models\Stats\Health.cs" />
+    <Compile Include="GameLogic\GameObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -58,8 +75,6 @@
     <Folder Include="Content\Sprites\Monster\" />
     <Folder Include="Content\Sprites\Player\" />
     <Folder Include="Content\Tiles\" />
-    <Folder Include="Game\Game Logic\Interface\" />
-    <Folder Include="Game\Game Logic\Models\NPC\Base\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
