--- a/RPG/RPG.csproj
+++ b/RPG/RPG.csproj
@@ -49,6 +49,7 @@
     <Compile Include="GameLogic\Models\Items\Base\PickUp.cs" />
     <Compile Include="GameLogic\Models\Items\Item.cs" />
     <Compile Include="GameLogic\Models\NPC\Base\Npc.cs" />
+    <Compile Include="GameLogic\Models\NPC\Base\Player.cs" />
     <Compile Include="GameLogic\Models\Stats\Attack.cs" />
     <Compile Include="GameLogic\Models\Stats\Base\Stat.cs" />
     <Compile Include="GameLogic\Models\Stats\Health.cs" />
