--- a/RPG/RPG.csproj
+++ b/RPG/RPG.csproj
@@ -36,6 +36,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Game1.cs" />
+    <Compile Include="GameLogic\Core\Engine.cs" />
+    <Compile Include="GameLogic\Core\ItemManager.cs" />
+    <Compile Include="GameLogic\Core\Items\ItemFactory.cs" />
+    <Compile Include="GameLogic\Core\Items\ItemType.cs" />
     <Compile Include="GameLogic\Interface\IDraw.cs" />
     <Compile Include="GameLogic\Interface\IEnemy.cs" />
     <Compile Include="GameLogic\Interface\IFight.cs" />
@@ -45,11 +49,13 @@
     <Compile Include="GameLogic\Interface\IMove.cs" />
     <Compile Include="GameLogic\Interface\ITimeout.cs" />
     <Compile Include="GameLogic\Models\Effects\Base\Effects.cs" />
+    <Compile Include="GameLogic\Models\Effects\EffectType.cs" />
     <Compile Include="GameLogic\Models\Inventory\Base\Inventory.cs" />
     <Compile Include="GameLogic\Models\Items\Base\PickUp.cs" />
     <Compile Include="GameLogic\Models\Items\Bonus.cs" />
     <Compile Include="GameLogic\Models\Items\Item.cs" />
     <Compile Include="GameLogic\Models\NPC\Base\Npc.cs" />
+    <Compile Include="GameLogic\Models\NPC\Enemy.cs" />
     <Compile Include="GameLogic\Models\NPC\Player.cs" />
     <Compile Include="GameLogic\Models\Stats\Attack.cs" />
     <Compile Include="GameLogic\Models\Stats\Base\Stat.cs" />
