--- a/RPG/RPG.csproj
+++ b/RPG/RPG.csproj
@@ -49,7 +49,9 @@
     <Compile Include="GameLogic\Interface\IMove.cs" />
     <Compile Include="GameLogic\Interface\ITimeout.cs" />
     <Compile Include="GameLogic\Models\Effects\Base\Effects.cs" />
-    <Compile Include="GameLogic\Models\Effects\EffectType.cs" />
+    <Compile Include="GameLogic\Models\Effects\Base\EffectType.cs" />
+    <Compile Include="GameLogic\Models\Effects\Base\EffectTarget.cs" />
+    <Compile Include="GameLogic\Models\Effects\Effect.cs" />
     <Compile Include="GameLogic\Models\Inventory\Base\Inventory.cs" />
     <Compile Include="GameLogic\Models\Items\Base\PickUp.cs" />
     <Compile Include="GameLogic\Models\Items\Bonus.cs" />
