--- a/RPG/RPG.csproj
+++ b/RPG/RPG.csproj
@@ -91,7 +91,9 @@
     <Folder Include="Content\Tiles\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Content\Fonts\Arial.xnb" />
+    <Content Include="Content\Fonts\Arial.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
