--- a/RPG/RPG.csproj
+++ b/RPG/RPG.csproj
@@ -57,6 +57,7 @@
     <Compile Include="GameLogic\Models\Items\Base\PickUp.cs" />
     <Compile Include="GameLogic\Models\Items\Bonus.cs" />
     <Compile Include="GameLogic\Models\Items\Item.cs" />
+    <Compile Include="GameLogic\Models\MainMenu.cs" />
     <Compile Include="GameLogic\Models\NPC\Base\Npc.cs" />
     <Compile Include="GameLogic\Models\NPC\Enemy.cs" />
     <Compile Include="GameLogic\Models\NPC\Player.cs" />
@@ -81,79 +82,79 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\Overlays\MainMenu\continue_disabled.png">
+    <Content Include="Content\Overlays\Menu\continue_disabled.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\continue_hovered.png">
+    <Content Include="Content\Overlays\Menu\continue_hovered.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\continue_plain.png">
+    <Content Include="Content\Overlays\Menu\continue_plain.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\continue_pressed.png">
+    <Content Include="Content\Overlays\Menu\continue_pressed.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\credits_disabled.png">
+    <Content Include="Content\Overlays\Menu\credits_disabled.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\credits_hovered.png">
+    <Content Include="Content\Overlays\Menu\credits_hovered.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\credits_plain.png">
+    <Content Include="Content\Overlays\Menu\credits_plain.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\credits_pressed.png">
+    <Content Include="Content\Overlays\Menu\credits_pressed.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\exit_disabled.png">
+    <Content Include="Content\Overlays\Menu\exit_disabled.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\exit_hovered.png">
+    <Content Include="Content\Overlays\Menu\exit_hovered.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\exit_plain.png">
+    <Content Include="Content\Overlays\Menu\exit_plain.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\exit_pressed.png">
+    <Content Include="Content\Overlays\Menu\exit_pressed.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\load_game_disabled.png">
+    <Content Include="Content\Overlays\Menu\load_game_disabled.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\load_game_hovered.png">
+    <Content Include="Content\Overlays\Menu\load_game_hovered.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\load_game_plain.png">
+    <Content Include="Content\Overlays\Menu\load_game_plain.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\load_game_pressed.png">
+    <Content Include="Content\Overlays\Menu\load_game_pressed.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\main_menu_background_under_buttons.png">
+    <Content Include="Content\Overlays\Menu\main_menu_background_under_buttons.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\new_game_disabled.png">
+    <Content Include="Content\Overlays\Menu\new_game_disabled.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\new_game_hovered.png">
+    <Content Include="Content\Overlays\Menu\new_game_hovered.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\new_game_plain.png">
+    <Content Include="Content\Overlays\Menu\new_game_plain.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\new_game_pressed.png">
+    <Content Include="Content\Overlays\Menu\new_game_pressed.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\options_disabled.png">
+    <Content Include="Content\Overlays\Menu\options_disabled.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\options_hovered.png">
+    <Content Include="Content\Overlays\Menu\options_hovered.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\options_plain.png">
+    <Content Include="Content\Overlays\Menu\options_plain.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Overlays\MainMenu\options_pressed.png">
+    <Content Include="Content\Overlays\Menu\options_pressed.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Icon.ico" />
