--- a/RPG/RPG.csproj
+++ b/RPG/RPG.csproj
@@ -61,6 +61,7 @@
     <Compile Include="GameLogic\Models\Items\Bonus.cs" />
     <Compile Include="GameLogic\Models\Items\Item.cs" />
     <Compile Include="GameLogic\Models\MainMenu.cs" />
+    <Compile Include="GameLogic\Models\Map.cs" />
     <Compile Include="GameLogic\Models\NPC\Base\Npc.cs" />
     <Compile Include="GameLogic\Models\NPC\Enemy.cs" />
     <Compile Include="GameLogic\Models\NPC\Player.cs" />
