--- a/RPG/RPG.csproj
+++ b/RPG/RPG.csproj
@@ -88,6 +88,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Overlays\Menu\background.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Overlays\Menu\continue_disabled.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
