--- a/RPG/RPG.csproj
+++ b/RPG/RPG.csproj
@@ -169,6 +169,9 @@
     <Content Include="Content\Sprites\Monster\enemies.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Sprites\Player\character.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Sprites\Player\player.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
