--- a/RPG/RPG.csproj
+++ b/RPG/RPG.csproj
@@ -49,19 +49,19 @@
     <Compile Include="GameLogic\Interface\IMove.cs" />
     <Compile Include="GameLogic\Interface\ITimeout.cs" />
     <Compile Include="GameLogic\Models\Battle.cs" />
-    <Compile Include="GameLogic\Models\BattleScreen.cs" />
+    <Compile Include="Graphics\BattleScreen.cs" />
     <Compile Include="GameLogic\Models\Effects\Base\Effects.cs" />
     <Compile Include="GameLogic\Models\Effects\Base\EffectType.cs" />
     <Compile Include="GameLogic\Models\Effects\Base\EffectTarget.cs" />
     <Compile Include="GameLogic\Models\Effects\Burning.cs" />
     <Compile Include="GameLogic\Models\Effects\Healing.cs" />
-    <Compile Include="GameLogic\Models\GameState.cs" />
+    <Compile Include="Graphics\GameState.cs" />
     <Compile Include="GameLogic\Models\Inventory\Base\Inventory.cs" />
     <Compile Include="GameLogic\Models\Items\Base\PickUp.cs" />
     <Compile Include="GameLogic\Models\Items\Bonus.cs" />
     <Compile Include="GameLogic\Models\Items\Item.cs" />
-    <Compile Include="GameLogic\Models\MainMenu.cs" />
-    <Compile Include="GameLogic\Models\Map.cs" />
+    <Compile Include="Graphics\MainMenu.cs" />
+    <Compile Include="Graphics\Map\Map.cs" />
     <Compile Include="GameLogic\Models\NPC\Base\Npc.cs" />
     <Compile Include="GameLogic\Models\NPC\Enemy.cs" />
     <Compile Include="GameLogic\Models\NPC\Player.cs" />
@@ -72,11 +72,12 @@
     <Compile Include="GameLogic\Models\Stats\FireAttack.cs" />
     <Compile Include="GameLogic\Models\Stats\Health.cs" />
     <Compile Include="GameLogic\GameObject.cs" />
-    <Compile Include="Helpers\Animation.cs" />
-    <Compile Include="Helpers\CustomShapes\Circle.cs" />
-    <Compile Include="Helpers\GamestateManager.cs" />
-    <Compile Include="Helpers\GUIElement.cs" />
-    <Compile Include="Helpers\TextDrawer.cs" />
+    <Compile Include="Graphics\Animation.cs" />
+    <Compile Include="Graphics\CustomShapes\Circle.cs" />
+    <Compile Include="Graphics\GamestateManager.cs" />
+    <Compile Include="Graphics\GUIElement.cs" />
+    <Compile Include="Graphics\Map\Tile.cs" />
+    <Compile Include="Graphics\TextDrawer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
