--- a/RPG/RPG.csproj
+++ b/RPG/RPG.csproj
@@ -62,9 +62,9 @@
     <Compile Include="GameLogic\Models\Items\Item.cs" />
     <Compile Include="Graphics\MainMenu.cs" />
     <Compile Include="Graphics\Map\Map.cs" />
-    <Compile Include="GameLogic\Models\NPC\Base\Npc.cs" />
-    <Compile Include="GameLogic\Models\NPC\Enemy.cs" />
-    <Compile Include="GameLogic\Models\NPC\Player.cs" />
+    <Compile Include="GameLogic\Models\Characters\Base\Character.cs" />
+    <Compile Include="GameLogic\Models\Characters\Enemy.cs" />
+    <Compile Include="GameLogic\Models\Characters\Player.cs" />
     <Compile Include="GameLogic\Models\Stats\Attack.cs" />
     <Compile Include="GameLogic\Models\Stats\Base\Stat.cs" />
     <Compile Include="GameLogic\Models\Stats\Base\StatType.cs" />
