working on map reading

--- a/RPG/RPG.csproj
+++ b/RPG/RPG.csproj
@@ -203,6 +203,9 @@
     <Content Include="Content\Tiles\wood_tileset_3.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\map.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
