Added spells and effects
- Not tested so it may not work. Will fix when I get back.

--- a/RPG/RPG.csproj
+++ b/RPG/RPG.csproj
@@ -50,19 +50,22 @@
     <Compile Include="GameLogic\Interface\IMove.cs" />
     <Compile Include="GameLogic\Interface\ITimeout.cs" />
     <Compile Include="GameLogic\Core\Battle\Battle.cs" />
+    <Compile Include="GameLogic\Models\Spells\Base\Spell.cs" />
+    <Compile Include="GameLogic\Models\Spells\Fireball.cs" />
+    <Compile Include="GameLogic\Models\Spells\Heal.cs" />
+    <Compile Include="GameLogic\Models\Stats\Fire.cs" />
     <Compile Include="Graphics\AbstractGameState.cs" />
     <Compile Include="Graphics\BattleScreen.cs" />
     <Compile Include="GameLogic\Models\Effects\Base\Effects.cs" />
     <Compile Include="GameLogic\Models\Effects\Base\EffectType.cs" />
-    <Compile Include="GameLogic\Models\Effects\Base\EffectTarget.cs" />
     <Compile Include="GameLogic\Models\Effects\Burning.cs" />
     <Compile Include="GameLogic\Models\Effects\Healing.cs" />
     <Compile Include="Graphics\CustomShapes\CircleDrawer.cs" />
     <Compile Include="Graphics\GameState.cs" />
     <Compile Include="GameLogic\Models\Inventory\Base\Inventory.cs" />
-    <Compile Include="GameLogic\Models\Items\Base\PickUp.cs" />
-    <Compile Include="GameLogic\Models\Items\Bonus.cs" />
-    <Compile Include="GameLogic\Models\Items\Item.cs" />
+    <Compile Include="GameLogic\Models\PickUps\Base\PickUp.cs" />
+    <Compile Include="GameLogic\Models\PickUps\Bonus.cs" />
+    <Compile Include="GameLogic\Models\PickUps\Item.cs" />
     <Compile Include="Graphics\GameStates\BattleScreenState.cs" />
     <Compile Include="Graphics\GameStates\GamePlayState.cs" />
     <Compile Include="Graphics\GameStates\LoseGameState.cs" />
